manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-api
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: api
  template:
    metadata:
      labels:
        app.kubernetes.io/component: api
    spec:
      automountServiceAccountToken: false
      containers:
        - name: app
          image: todo-api-image
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 10m
            limits:
              cpu: 500m
              memory: 250Mi
          volumeMounts:
            - mountPath: /mnt/data
              name: data
      volumes:
        - name: data
          emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: app
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app
    spec:
      automountServiceAccountToken: false
      containers:
        - name: app
          image: todo-app-image
          ports:
            - containerPort: 5173
              name: http
          resources:
            requests:
              cpu: 10m
            limits:
              cpu: 500m
              memory: 250Mi
