manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-api
spec:
  ingressClassName: nginx
  rules:
    - host: todo.127.0.0.1.nip.io
      http:
        paths:
          - pathType: Prefix
            path: "/api"
            backend:
              service:
                name: todo-api
                port:
                  name: http
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: todo-app
                port:
                  name: http
    - host: jaeger.127.0.0.1.nip.io
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: jaeger-query
                port:
                  name: http-query
